--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -15,13 +15,32 @@
     padding-bottom: 94px;
 }
 
-.list {
+.about__list {
+    @include tablet {
     display: flex;
-    gap: 30px;
-}
+    flex-wrap: wrap;
+    gap: 30px;}
+    @include desktop {
+        display: flex;
+        }
+    }
 
 .about__item {
-    width: calc(100% / 3 - 30px);
+    width: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
+    @include mobile{
+    max-width: 450px;    
+    }
+    @include tablet {
+        width: calc((100% / 2) - 30px);
+    }
+    @include desktop { 
+        max-width: 270px;
+    }
+
+    
+    // width: calc(100% / 3 - 30px);
 }
 
 .about__title {
@@ -33,6 +52,13 @@
     color: var(--title-common-color);
     margin-bottom: 10px;
     margin-top: 30px;
+    text-align: center;    
+    @include tablet {
+        text-align: start;
+    } 
+    @include desktop {
+        text-align: start;
+    }
 }
 
 .about__text {
@@ -41,7 +67,14 @@
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--contact-color);
-    max-width: 270px;
+    margin-bottom: 30px;
+    // max-width: 270px;
+    @include tablet {
+        min-width: 270px;
+    }
+        @include desktop {
+            min-width: 270px;
+        }
 }
 
 .title {
