--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,24 +1,60 @@
 .hero {
     background-color: var(--background-common-color);
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Hero-img-mob.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     padding: 200px 0;
-}
 
+    @include mobile {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Hero-img-mob.jpg);
+    @include retina{
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Hero-img-mob-2x.jpg);
+    }
+    }
+    @include tablet {
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Hero-img-tablet.jpg);
+        @include retina {
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Hero-img-tablet-2x.jpg);
+        }
+    }
+    @include desktop {
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Hero-img-desktop.jpg);
+        @include retina {
+        background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Hero-img-desktop-2x.jpg);
+        }
+    }
+}
+.hero__container {
+    align-items: center;
+    justify-content: center;
+}
 .hero__title {
     font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
+    font-size: 26px;
+    line-height: 1.62;
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: var(--common-color);
-    margin-bottom: 40px;
-    max-width: 696px;
+    // margin-bottom: 40px;
+    // max-width: 696px;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 30px; 
+    @include mobile {
+    
+    }
+
+    @include tablet {
+    max-width: 360px;
+    }
+    @include desktop {
+    font-size: 44px;
+    line-height: 1.36;
+    max-width: 696px;
+    }
+        
 }
 
 .hero__btn {
@@ -36,12 +72,15 @@
     background: #2196f3;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
-    min-width: 216px;
+    min-width: 200px;
     border: none;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+@include desktop {
+    min-width: 216px;
+}
     &:hover,
-&:focus {
-            background-color: #188ce8;
-        }
+    &:focus {
+        background-color: #188ce8;
+    }
 }
 
