--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import './utils/vars';
+@import './utils/mixin';
 @import './utils/reset';
 @import './components/header';
 @import './components/logo';
@@ -10,4 +11,5 @@
 @import './components/footer';
 @import './components/modal';
 @import './components/portfolio';
+@import './components/container';
 
