--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -2,9 +2,36 @@
     background: #f5f4fa;
     padding: 94px 0;
 }
+.team .title{
+    font-weight: 700;
+        font-size: 28px;
+        line-height: 1.18;
+    @include desktop{
+            font-size: 36px;
+            line-height: 1.17;
+    }
+}
+.team-list {
+    @include tablet {
+display: flex;
+flex-wrap: wrap;
+gap: 30px;
+    }
+
+    @include desktop {
+    display: flex;
+gap: 30px;    
+    }
+}
 
 .team-item {
-    width: calc(100% / 4 - 30px);
+    @include tablet {
+        // width: calc(100% / 2 - 30px);
+        width: 352px;
+    }
+    @include desktop {
+    width: calc(100% / 4 - 30px);    
+    }
     background: var(--common-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
