--- a/css/main.css
+++ b/css/main.css
@@ -610,6 +610,11 @@ body {
 
 .container-footer-second {
   margin-top: 12px;
+  flex-direction: column;
+}
+
+.container-footer-second .list {
+  display: flex;
 }
 
 .footer-soc-title {
