--- a/css/main.css
+++ b/css/main.css
@@ -553,6 +553,21 @@ body {
   padding-bottom: 60px;
 }
 
+.container-footer {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: baseline;
+  justify-content: space-around;
+  margin-left: auto;
+  margin-right: auto;
+}
+@media screen and (min-width: 1200px) {
+  .container-footer {
+    display: flex;
+    flex-wrap: nowrap;
+  }
+}
+
 .footer-soc-title {
   font-weight: 700;
   font-size: 14px;
@@ -571,6 +586,7 @@ body {
   display: block;
   color: var(--common-color);
   margin-bottom: 20px;
+  text-align: center;
 }
 
 .footer-item-mail,
@@ -582,35 +598,56 @@ body {
   color: rgba(255, 255, 255, 0.6);
 }
 
-.footer-item-mail {
-  margin-bottom: 9px;
-}
-
 .footer-item {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.72;
   letter-spacing: 0.03em;
   color: var(--common-color);
+  text-align: center;
+}
+
+.footer-item:not(:last-child) {
   margin-bottom: 9px;
 }
 
 .contacts-address {
   font-style: normal;
-  margin-bottom: 9px;
 }
 
 .footer .container {
   display: flex;
 }
 
-.container-footer {
-  margin-right: 70px;
+.container-adress {
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .container-adress {
+    margin-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container-adress {
+    max-width: 231px;
+    margin-bottom: 0;
+  }
 }
 
 .container-footer-second {
-  margin-top: 12px;
-  flex-direction: column;
+  text-align: center;
+  margin-bottom: 60px;
+  margin-top: 60px;
+}
+@media screen and (min-width: 768px) {
+  .container-footer-second {
+    margin-top: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container-footer-second {
+    margin-bottom: 0;
+  }
 }
 
 .container-footer-second .list {
@@ -634,20 +671,36 @@ body {
   fill: var(--common-color);
 }
 
-.subscription-box {
-  display: flex;
-  align-items: center;
-  margin-left: auto;
+@media screen and (min-width: 768px) {
+  .footer-tab {
+    display: inline-flex;
+    align-items: baseline;
+    gap: 165px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer-tab {
+    gap: 60px;
+  }
 }
 
-.footer-input-box {
+.footer-subscribe {
   display: flex;
-  flex-direction: column-reverse;
-  margin-bottom: 37px;
+}
+
+.subscription-box {
+  display: block;
+  text-align: center;
+}
+@media screen and (min-width: 1200px) {
+  .subscription-box {
+    display: flex;
+    align-items: baseline;
+    text-align: left;
+  }
 }
 
 .footer-label {
-  margin-bottom: 20px;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -657,9 +710,10 @@ body {
 }
 
 .footer-input {
-  width: 358px;
+  width: 100%;
   height: 50px;
-  margin-right: 12px;
+  margin-top: 20px;
+  margin-bottom: 20px;
   padding: 15px 16px;
   font-size: 16px;
   line-height: 1.25;
@@ -688,8 +742,9 @@ body {
   color: var(--common-color);
   border: none;
   cursor: pointer;
+  margin-right: auto;
+  margin-left: auto;
 }
-
 .icon-send {
   margin-left: 10px;
 }
