--- a/css/main.css
+++ b/css/main.css
@@ -33,9 +33,6 @@ address {
 }
 
 .container {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
   margin: 0 auto;
 }
 
@@ -58,7 +55,7 @@ body {
 }
 
 .header__container {
-  gap: 93px;
+  padding: 0 10px;
 }
 
 .navigation {
@@ -66,14 +63,43 @@ body {
   align-items: center;
   justify-content: space-between;
 }
+@media screen and (min-width: 768px) {
+  .navigation {
+    display: flex;
+  }
+}
 
 .menu {
+  display: none;
   gap: 50px;
 }
+@media screen and (min-width: 768px) {
+  .menu {
+    display: flex;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .menu {
+    display: flex;
+  }
+}
 
-.menu__link.current {
+.menu-open-btn {
+  display: block;
+  margin-left: auto;
+  border: none;
+  background-color: transparent;
+}
+@media screen and (min-width: 768px) {
+  .menu-open-btn {
+    display: none;
+  }
+}
+
+.menu__link {
   position: relative;
 }
+
 .menu__link.current::after {
   content: "";
   left: 0;
@@ -97,25 +123,81 @@ body {
   color: var(--active-link-color);
 }
 
-.menu__link, .contacts__link {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: var(--title-common-color);
-  padding: 32px 0;
-  display: block;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+@media screen and (min-width: 768px) {
+  .menu__link {
+    padding: 0;
+    font-size: 12px;
+    line-height: 1.16;
+    padding: 32px 0;
+  }
 }
-.menu__link:hover, .contacts__link:hover {
-  color: #2196F3;
+@media screen and (min-width: 1200px) {
+  .menu__link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: var(--title-common-color);
+    padding: 32px 0;
+    display: block;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .menu__link:hover {
+    color: #2196F3;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .contacts__link {
+    padding: 0;
+    font-size: 12px;
+    line-height: 1.16;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contacts__link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: var(--title-common-color);
+    padding: 32px 0;
+    display: block;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .contacts__link:hover {
+    color: #2196F3;
+  }
+}
+
+.contacts {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  .contacts {
+    display: block;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contacts {
+    display: flex;
+  }
 }
 
 .contacts__link {
   color: var(--contact-color);
 }
 
-.contacts__item {
+.contacts__item:not(:last-child) {
+  margin-bottom: 10px;
+}
+@media screen and (min-width: 1200px) {
+  .contacts__item:not(:last-child) {
+    margin-bottom: 0;
+  }
+}
+
+.contacts__icon {
   margin-right: 10px;
 }
 
@@ -126,15 +208,116 @@ body {
   fill: currentColor;
 }
 
+.menu-open-btn {
+  margin-left: auto;
+}
+
+.mob-menu {
+  position: absolute;
+  top: 0;
+  background-color: white;
+  width: 100vw;
+  height: 100vh;
+  padding-top: 10px;
+  padding-bottom: 48px;
+  padding-left: 20px;
+  padding-right: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow: auto;
+}
+
+.mob-menu-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mob-menu-icon:hover, .mob-menu-icon:focus {
+  fill: var(--active-link-color);
+}
+
+.menu-close-btn {
+  display: block;
+  margin-left: auto;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.mob-menu__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mob-menu__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: #212121;
+}
+
+.mob-contacts {
+  margin-bottom: 64px;
+}
+
+.mob-contacts__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mob-contacts__link {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: #757575;
+}
+
+.mob-soc-list {
+  display: flex;
+  position: relative;
+  gap: 20px;
+}
+
+.mob-soc-item:not(:last-child)::after {
+  display: inline-block;
+  content: "";
+  width: 1px;
+  height: 22px;
+  background-color: rgba(33, 33, 33, 0.2);
+  position: absolute;
+  margin-left: 10px;
+}
+
+.mob-soc-link {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: #2196F3;
+}
+
+.mob-menu.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+}
+
 .logo {
   font-family: "Raleway", sans-serif;
   font-style: normal;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
   color: var(--top-color);
   text-decoration: none;
+  margin-right: 88px;
+  padding: 25px 0;
+}
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-size: 26px;
+    line-height: 1.19;
+  }
 }
 
 .logo-part-one {
@@ -147,7 +330,7 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  padding: 200px 0;
+  padding: 118px 0;
 }
 @media screen and (min-width: 480px) {
   .hero {
@@ -171,6 +354,7 @@ body {
 }
 @media screen and (min-width: 1200px) {
   .hero {
+    padding: 200px 0;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Hero-img-desktop.jpg);
   }
 }
@@ -239,7 +423,12 @@ body {
 }
 
 .about {
-  padding: 94px 0;
+  padding: 60px 0;
+}
+@media screen and (min-width: 1200px) {
+  .about {
+    padding: 94px 0;
+  }
 }
 
 .about__item-bg {
@@ -345,7 +534,8 @@ body {
 }
 @media screen and (min-width: 1200px) {
   .occupation {
-    display: block;
+    display: flex;
+    flex-basis: calc(33.3333333333% - 60px);
   }
 }
 
@@ -355,10 +545,15 @@ body {
 }
 
 .occupation__list {
-  display: flex;
+  display: none;
   justify-content: center;
   gap: 30px;
   flex-basis: calc(33.3333333333% - 60px);
+}
+@media screen and (min-width: 1200px) {
+  .occupation__list {
+    display: flex;
+  }
 }
 
 .occipation__img-text {
@@ -382,7 +577,12 @@ body {
 
 .team {
   background: #f5f4fa;
-  padding: 94px 0;
+  padding: 60px 0;
+}
+@media screen and (min-width: 1200px) {
+  .team {
+    padding: 94px 0;
+  }
 }
 
 .team .title {
@@ -480,8 +680,12 @@ body {
 }
 
 .clients {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding: 60px 0;
+}
+@media screen and (min-width: 1200px) {
+  .clients {
+    padding: 94px 0;
+  }
 }
 
 .clients .title {
@@ -695,8 +899,9 @@ body {
 @media screen and (min-width: 1200px) {
   .subscription-box {
     display: flex;
-    align-items: baseline;
+    align-items: center;
     text-align: left;
+    gap: 12px;
   }
 }
 
@@ -745,6 +950,12 @@ body {
   margin-right: auto;
   margin-left: auto;
 }
+@media screen and (min-width: 1200px) {
+  .footer-btn {
+    transform: translateY(16%);
+  }
+}
+
 .icon-send {
   margin-left: 10px;
 }
