--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -1,5 +1,8 @@
 .about {
-    padding: 94px 0;
+    padding: 60px 0;
+    @include desktop{
+        padding: 94px 0;
+    }
 }
 
 .about__item-bg {
