--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,6 +1,8 @@
 .clients {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding: 60px 0;
+    @include desktop {
+        padding: 94px 0;
+        }
 }
 .clients .title{
     font-weight: 700;
