--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -2,11 +2,18 @@
     font-family: "Raleway", sans-serif;
     font-style: normal;
     font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
+    font-size: 24px;
+    line-height: 1.16;
     letter-spacing: 0.03em;
     color: var(--top-color);
     text-decoration: none;
+    margin-right: 88px;
+    padding: 25px 0;
+
+    @include desktop{
+        font-size: 26px;
+        line-height: 1.19;
+    }
 }
 
 .logo-part-one {
