--- a/sass/utils/_reset.scss
+++ b/sass/utils/_reset.scss
@@ -24,9 +24,9 @@ address {
 }
 
 .container {
-    width: 1200px;
-    padding-left: 15px;
-    padding-right: 15px;
+    // width: 1200px;
+    // padding-left: 15px;
+    // padding-right: 15px;
     margin: 0 auto;
 }
 
