--- a/css/main.css
+++ b/css/main.css
@@ -975,8 +975,8 @@ body {
 
 .modal {
   position: absolute;
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  height: 609px;
   background-color: #fff;
   left: 50%;
   top: 50%;
@@ -986,6 +986,12 @@ body {
   background: var(--common-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
 }
 
 .btn-close {
@@ -1055,8 +1061,8 @@ body {
 }
 
 .comment-box {
-  min-width: 448px;
-  min-height: 120px;
+  min-width: 370px;
+  min-height: 138px;
   resize: none;
   padding: 12px 16px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -1087,10 +1093,16 @@ body {
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
+@media screen and (min-width: 1200px) {
+  .comment-box {
+    min-width: 448px;
+    min-height: 120px;
+  }
+}
 
 .check-text {
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
   display: flex;
   color: var(--contact-color);
@@ -1113,6 +1125,12 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   border-color: transparent;
+}
+@media screen and (min-width: 1200px) {
+  .check-text {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .input-check {
