--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -14,8 +14,8 @@
 
 .modal {
     position: absolute;
-    width: 528px;
-    height: 581px;
+    width: 450px;
+    height: 609px;
     background-color: #fff;
     left: 50%;
     top: 50%;
@@ -26,6 +26,11 @@
     background: var(--common-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
+
+    @include desktop{
+    width: 528px;
+    height: 581px;
+    }
 }
 
 .btn-close {
@@ -106,8 +111,9 @@
 }
 
 .comment-box {
-    min-width: 448px;
-    min-height: 120px;
+   
+    min-width: 370px;
+    min-height: 138px;
     resize: none;
     padding: 12px 16px;
     border: 1px solid rgba(33, 33, 33, 0.2);
@@ -124,11 +130,15 @@
         
                     color: rgba(117, 117, 117, 0.5);
                 }
+@include desktop {
+    min-width: 448px;
+    min-height: 120px;
+}
 }
 
 .check-text {
-    font-size: 14px;
-    line-height: 1.71;
+font-size: 12px;
+    line-height: 1.16;
     letter-spacing: 0.03em;
     display: flex;
     color: var(--contact-color);
@@ -152,6 +162,10 @@
                     background-repeat: no-repeat;
                     border-color: transparent;
                 }
+@include desktop{
+font-size: 14px;
+line-height: 1.71;    
+}
 }
 
 
