--- a/css/main.css
+++ b/css/main.css
@@ -32,10 +32,6 @@ address {
   font-style: normal;
 }
 
-.container {
-  margin: 0 auto;
-}
-
 body {
   background-color: var(--common-color);
   font-family: "Roboto", sans-serif;
@@ -326,7 +322,7 @@ body {
 
 .hero {
   background-color: var(--background-common-color);
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/Hero-img-mob.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -448,7 +444,6 @@ body {
   .about__list {
     display: flex;
     flex-wrap: wrap;
-    gap: 30px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -544,15 +539,10 @@ body {
 }
 
 .occupation__list {
-  display: none;
+  display: flex;
   justify-content: center;
   gap: 30px;
   flex-basis: calc(33.3333333333% - 60px);
-}
-@media screen and (min-width: 1200px) {
-  .occupation__list {
-    display: flex;
-  }
 }
 
 .occipation__img-text {
@@ -1310,6 +1300,8 @@ img {
 }
 
 .container {
+  padding-left: 15px;
+  padding-right: 15px;
   margin: 0 auto;
 }
 @media screen and (min-width: 480px) {
