--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -11,7 +11,7 @@
     height: 120px;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; 
 }
 
 .occupation {
@@ -22,7 +22,7 @@
     @include tablet {
     display: flex;
     flex-wrap: wrap;
-    gap: 30px;}
+}
     @include desktop {
         display: flex;
         }
