--- a/css/main.css
+++ b/css/main.css
@@ -444,6 +444,7 @@ body {
   .about__list {
     display: flex;
     flex-wrap: wrap;
+    gap: 30px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -454,8 +455,6 @@ body {
 
 .about__item {
   width: 100%;
-  padding-left: 15px;
-  padding-right: 15px;
 }
 @media screen and (min-width: 480px) {
   .about__item {
@@ -778,8 +777,9 @@ body {
 .footer-logo {
   display: block;
   color: var(--common-color);
-  margin-bottom: 20px;
   text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .footer-item-mail,
