--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -22,6 +22,7 @@
     @include tablet {
     display: flex;
     flex-wrap: wrap;
+    gap: 30px;
 }
     @include desktop {
         display: flex;
@@ -30,8 +31,6 @@
 
 .about__item {
     width: 100%;
-    padding-left: 15px;
-    padding-right: 15px;
     @include mobile{
     max-width: 450px;    
     }
