--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -35,8 +35,10 @@
 .footer-logo {
     display: block;
     color: var(--common-color);
-    margin-bottom: 20px;
+    // margin-bottom: 20px;
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 
 }
 
