--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -23,6 +23,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
+    justify-content: center;
 }
     @include desktop {
         display: flex;
